<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_actualizar_automaticamente"
        android:summary="@string/pref_actualizar_automaticamente_sum"
        android:title="@string/pref_actualizar_automaticamente" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_actualizar_categorias"
        android:summary="@string/pref_actualizar_solo_categorias_sum"
        android:title="@string/pref_actualizar_solo_categorias" />

    <PreferenceCategory
        android:key="pref_cate_actualizar_categorias"
        android:title="@string/pref_cat_config_categorias_actualizar" >
    </PreferenceCategory>

</PreferenceScreen>