<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TableRow
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/botonConoce"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_conoce"
                    android:onClick="mostrar"
                    android:tag="SITIO" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/conoceMoraleja"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/botonTapas"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1.35"
                    android:background="@drawable/feo"
                    android:onClick="mostrar"
                    android:tag="TOMAR_ALGO" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/deTapas"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/botonComer"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_comer"
                    android:onClick="mostrar"
                    android:tag="COMER_DORMIR" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dondeComer"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/botonComprar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_decompras"
                    android:onClick="mostrar"
                    android:tag="DE_COMPRAS" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dondeComprar"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/botonServicios"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_servicios"
                    android:onClick="mostrar"
                    android:tag="SERVICIOS" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/serviciosReparaciones"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingRight="20dp" >

                <Button
                    android:id="@+id/botonFavoritos"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/ic_favoritos"
                    android:onClick="mostrarFavoritos" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/favoritos"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txBienvenidax"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txBienvenida"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/copiright"
        android:textColor="#000000"
        android:textStyle="bold" />
  

</LinearLayout>